Update JavaFX version